Add an optional Commander bracket to decks
